generated/checkers/refine/KN-Integer-Overflow-b0b0d811-0/build_logs/syntax-repair-refine-1-2/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static void {anonymous}::SAGenTestChecker::getTypeRange128(clang::QualType, clang::ento::CheckerContext&, llvm::APInt&, llvm::APInt&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:172:16: error: ‘class llvm::APInt’ has no member named ‘zextOrSelf’
  172 |     Min = TMin.zextOrSelf(128);
      |                ^~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:173:16: error: ‘class llvm::APInt’ has no member named ‘zextOrSelf’
  173 |     Max = TMax.zextOrSelf(128);
      |                ^~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:177:16: error: ‘class llvm::APInt’ has no member named ‘sextOrSelf’
  177 |     Min = TMin.sextOrSelf(128);
      |                ^~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:178:16: error: ‘class llvm::APInt’ has no member named ‘sextOrSelf’
  178 |     Max = TMax.sextOrSelf(128);
      |                ^~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
